@@ -2,6 +2,6 @@ package com.newstore;
 
 public class App {
   public static String hello(String name) {
-    return String.format("Hello, %s!", name);
+    return "Hello, %s!".formatted(name);
   }
 }
